# swl-variant

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  variant.cpp  variant.hpp  variant_detail.hpp  variant_visit.hpp
benchmarks/: benchmark.cpp
include/swl/: variant.hpp  variant_detail.hpp  variant_visit.hpp
test/: all_test.cpp  get_if_index.pass.cpp  get_index.pass.cpp  pipecmd.hpp  robust_against_adl.pass.cpp  swl_assert.hpp  variant_test_helpers.h
test/tests/variant.bad_variant_access/: bad_variant_access.pass.cpp
test/tests/variant.get/: get_if_index.pass.cpp  get_if_type.pass.cpp  get_index.pass.cpp  get_type.pass.cpp  holds_alternative.pass.cpp
test/tests/variant.hash/: enabled_hash.pass.cpp  enabled_hash.pass.cpp.ignore  hash.pass.cpp
test/tests/variant.helpers/: variant_alternative.fail.cpp  variant_alternative.pass.cpp  variant_size.pass.cpp
test/tests/variant.monostate/: monostate.pass.cpp
test/tests/variant.monostate.relops/: relops.pass.cpp
test/tests/variant.relops/: relops.pass.cpp  relops_bool_conv.fail.cpp
test/tests/variant.variant/: variant_array.fail.cpp  variant_empty.fail.cpp  variant_reference.fail.cpp  variant_void.fail.cpp
test/tests/variant.visit/: robust_against_adl.pass.cpp  visit.pass.cpp  visit_return_type.pass.cpp
test/variant.bad_variant_access/: bad_variant_access.pass.cpp
test/variant.get/: get_if_index.pass.cpp  get_if_type.pass.cpp  get_type.pass.cpp  holds_alternative.pass.cpp
test/variant.hash/: enabled_hash.pass.cpp  hash.pass.cpp
test/variant.monostate/: monostate.pass.cpp
test/variant.monostate.relops/: relops.pass.cpp
test/variant.relops/: relops.pass.cpp  relops_bool_conv.fail.cpp
test/variant.variant/: variant_array.fail.cpp  variant_empty.fail.cpp  variant_reference.fail.cpp  variant_void.fail.cpp
test/variant.variant/variant.assign/: T.pass.cpp  conv.pass.cpp  (+3 more)
test/variant.visit/: robust_against_adl.pass.cpp  visit.pass.cpp  visit_return_type.pass.cpp
tests/: variant_test_helpers.h
tests/tests/: throwing_conversion.pass.cpp
(+85 files in other folders)
